--- a/portfolio.html
+++ b/portfolio.html
@@ -5,9 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Steve Aruba  Bootstrap Portfolio</title>
+	<title>Moon&apos;s Bootstrap Portfolio</title>
 
-	<link rel="icon" sizes="32x32" href="">
+	<link rel="icon" sizes="32x32" href="./images/fdmoon_icon.png">
 	
 	<link rel="stylesheet" type="text/css" href="./css/reset.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -43,28 +43,40 @@
 			<div class="row">
 				<section class="col-md-8">
 					<div class="col-md-12 mysection">
-						<div class="myh2">About Me</div>
+						<div class="myh2">Portfolio</div>
 						<hr id="hrtop">
 
-						<img id="bioimg" src="" alt="">
-						<p>    </p>
-							 
+						<div class="row">
+							<div class="col-md-6 pfgrp">
+								<img class="pfimg" src="./images/portfolio_img1.jpg" alt="Portfolio #1">
+								<button class="pfbtn">Portfolio #1</button>
+							</div>
+							<div class="col-md-6 pfgrp">
+								<img class="pfimg" src="./images/portfolio_img2.jpg" alt="Portfolio #2">					
+								<button class="pfbtn">Portfolio #2</button>
+							</div>
+						</div>
 
-						<div class="myh3"></div>
-						<ul>
-							<li></li>
-							<li></li>
-							<li></li>
-						</ul>
-						<br>
+						<div class="row">
+							<div class="col-md-6">
+								<img class="pfimg" src="./images/portfolio_img1.jpg" alt="Portfolio #3">
+								<button class="pfbtn">Portfolio #3</button>
+							</div>
+							<div class="col-md-6">
+								<img class="pfimg" src="./images/portfolio_img2.jpg" alt="Portfolio #4">					
+								<button class="pfbtn">Portfolio #4</button>
+							</div>
+						</div>
 
-						<div class="myh3">Favorite Things</div>
-						<ul>
-							<li>Sports: Ping-pong, Basketball, Soccer</li>
-							<li>Music: Pop, R&amp;B/Soul</li>
-							<li>Food: Korean/Chinese/Jamaican</li>
-							<li>Hobby: Watching TV Shows, Soccer, Traveling</li>
-						</ul>
+						<div class="row">
+							<div class="col-md-6">
+								<img class="pfimg" src="./images/portfolio_img1.jpg" alt="Portfolio #5">
+								<button class="pfbtn">Portfolio #5</button>
+							</div>
+							<div class="col-md-6">
+								&nbsp;
+							</div>
+						</div>
 					</div>
 				</section>
 				<section class="col-md-4">
@@ -73,10 +85,10 @@
 						<hr>
 
 						<div class="sideicon">
-							<a href="https://github.com/aruba123" target="_blank">
-								<img class="iconimg" src="images.png" >
+							<a href="https://github.com/fdmoon/" target="_blank">
+								<img class="iconimg" src="images/github_icon.png" >
 							</a>
-							<a href="placeholder-linked-in" target="_blank">
+							<a href="https://www.linkedin.com/in/felix-daekeun-moon/" target="_blank">
 								<img class="iconimg" src="images/linkedin_icon.png" >
 							</a>
 							<a href="https://stackoverflow.com/" target="_blank">
@@ -88,7 +100,7 @@
 				</section>
 			</div>
 		</div>
-	</div>
+	</div>	
 
 	<footer>
 		&copy;Copyright 2017 Steven Aruba
