--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	
 	
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="C:\Users\owner\homework\Bootstrap-portfolio\assets\style.css">
-	<link rel="stylesheet" type="text/css" href="/assets/style.css">
+	
+	<link rel="stylesheet" type="text/css" href="./assets/style.css">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -78,10 +78,10 @@
 								<img class="iconimg" src="assets/images/github-128.png" >
 							</a>
 							<a href="placeholder-linked-in" target="_blank">
-								<img class="iconimg" src="images/linkedin_icon.png" >
+								<img class="iconimg" src="assets/images/linkedin-128.png" >
 							</a>
 							<a href="https://stackoverflow.com/" target="_blank">
-								<img class="iconimg" src="images/stackoverflow_icon.png" >
+								<img class="iconimg" src="assets/images/stackoverflow-128.png" >
 							</a>
 							
 						</div>
